# Max-Phisher

./: README.md  maxphisher.py
.github/workflows/: docker.yml
files/: Dockerfile  pyproject.toml
